# Teledildonics-as-a-Service

./: .dockerignore  .env.deploy.example  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  koyeb.yaml  package-lock.json  package.json  plan.md  tsconfig.base.json
.github/workflows/: ci.yml  deploy-hf-space.yml  deploy-koyeb.yml
apps/companion/app/: index.html
apps/companion/src-tauri/: Cargo.toml  tauri.conf.json
apps/companion/src-tauri/src/: lib.rs  main.rs
apps/creator-console/: index.html  package.json  tsconfig.json
apps/creator-console/src/: main.ts  (+2 more)
apps/demo-app/: next.config.mjs  package.json  tailwind.config.ts  vercel.json
apps/hosted-control/: index.html  package.json
cmd/control-api/: config.go  main.go  runtime.go
crates/companion-core/: Cargo.toml
crates/companion-core/src/: bridge.rs  crypto.rs  device.rs  lib.rs  model.rs  relay.rs  runtime.rs
docs/: free-platform-deployment.md  openapi.json  relay-transport.md
docs/runbooks/: huggingface-spaces-deploy.md  koyeb-deploy.md  local-demo-validation.md
internal/api/: docs.go  dto.go  http.go  http_integration_test.go  http_test.go  vto.go
internal/domain/: domain.go
internal/relay/: relay.go
internal/secure/: crypto.go
internal/service/: service.go  service_test.go
internal/store/: memory.go  postgres.go  postgres_config_test.go  postgres_integration_test.go  redis.go  redis_integration_test.go  store.go
scripts/: check-contracts.mjs  deploy-hf-space.sh  deploy-koyeb.sh  run-control-api.sh
tests/: domain-sdk.test.mjs
(+24 files in other folders)
