[package]
name = "companion-core"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
humantime = "2"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
x25519-dalek = { version = "2", features = ["getrandom", "static_secrets"] }
