[package]
name = "taas-companion"
version = "0.1.0"
edition = "2021"

[lib]
name = "taas_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
base64 = "0.22"
companion-core = { path = "../../../crates/companion-core" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2" }
